# MakiNet-Agent

./: README.md  pyproject.toml
makinet_agent/: global_vars.py  main.py  utils.py
makinet_agent/models/: agent.py  image.py
makinet_agent/routers/action/: __init__.py  image.py  task.py
makinet_agent/task/: __init__.py  loggers.py  manager.py
